<resources>
    <string name="app_name">Chronos</string>
    <string name="chat">聊天</string>
    <string name="rank">排行</string>
    <string name="schedule">周历</string>
    <string name="clock">闹钟</string>
    <string name="plan">计划</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment">fragment</string>
    <string name="user_name">user</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_has_account">已有帐号？直接登录</string>
</resources>
